# yt_spotify_playlist_generator

./: Dockerfile.dev  README.md  pyproject.toml  requirements.txt  search_songs.py  transcribe.py  videos.py
ytsp/01Scripts/: search_songs.py  videos.py
ytsp/02APIs/: main.py
